--- a/5.html
+++ b/5.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>主次承商關聯圖</title>
+  <title>主承商關聯圖</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
@@ -11,142 +11,117 @@
   <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
-    .node circle { stroke: #fff; stroke-width: 1.5px; }
-    .node text { pointer-events: none; font-size: 12px; }
-    .link { stroke: #999; stroke-opacity: 0.6; }
+    #chart { width: 100%; height: 600px; }
+    .node text { pointer-events: none; font-size: 12px; fill: #000; }
   </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
+
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a></li>
-      <li class="nav-item d-none d-sm-inline-block"><a href="1.html" class="nav-link">首頁</a></li>
+      <li class="nav-item d-none d-sm-inline-block"><a href="#" class="nav-link">首頁</a></li>
     </ul>
   </nav>
 
   <!-- Sidebar -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a href="#" class="brand-link">
-      <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/8/83/Taiwan_Semiconductor_Manufacturing_Co_logo.svg/800px-Taiwan_Semiconductor_Manufacturing_Co_logo.svg.png" alt="TSMC Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+    <a href="1.html" class="brand-link">
+      <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/8/83/Taiwan_Semiconductor_Manufacturing_Co_logo.svg/800px-Taiwan_Semiconductor_Manufacturing_Co_logo.svg.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">勞動人力資料庫</span>
     </a>
     <div class="sidebar">
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
-          <li class="nav-item"><a href="2.html" class="nav-link"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a></li>
-          <li class="nav-item"><a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a></li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員評鑑</p></a></li>
-            </ul>
-          </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>系統管理<i class="right fas fa-angle-left"></i></p></a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>帳號管理</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>角色管理</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>稽核記錄</p></a></li>
-              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>參數設定</p></a></li>
-            </ul>
-          </li>
+          <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a></li>
         </ul>
       </nav>
     </div>
   </aside>
 
-  <!-- Content Wrapper -->
+  <!-- Content -->
   <div class="content-wrapper">
-    <div class="content-header">
-      <div class="container-fluid">
-        <h1 class="m-0">主承商與次承商關聯圖</h1>
-      </div>
-    </div>
-
-    <section class="content">
-      <div class="container-fluid">
-        <div class="card">
-          <div class="card-body">
-            <svg width="100%" height="600"></svg>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="content-header"><div class="container-fluid"><h1 class="m-0">主承商關聯圖</h1></div></div>
+    <section class="content"><div class="container-fluid"><div id="chart"></div></div></section>
   </div>
 </div>
 
 <script>
-  const svg = d3.select("svg"),
-        width = +svg.attr("width"),
-        height = +svg.attr("height");
+const data = {
+  nodes: [
+    { id: "主承商", group: "main", size: 1200 },
+    { id: "次承商1", group: "sub", size: 500 },
+    { id: "次承商2", group: "sub", size: 300 },
+    { id: "次承商3", group: "sub", size: 200 },
+    { id: "次承商4", group: "sub", size: 150 },
+    { id: "次承商5", group: "sub", size: 50 },
+    { id: "ME_1", group: "ME", size: 50 }, { id: "IE_1", group: "IE", size: 200 }, { id: "WT_1", group: "WT", size: 50 }, { id: "GC_1", group: "GC", size: 100 }, { id: "CSA_1", group: "CSA", size: 100 },
+    { id: "GC_2", group: "GC", size: 100 }, { id: "CSA_2", group: "CSA", size: 200 },
+    { id: "ME_3", group: "ME", size: 50 }, { id: "IE_3", group: "IE", size: 100 }, { id: "WT_3", group: "WT", size: 50 },
+    { id: "CSA_4", group: "CSA", size: 150 },
+    { id: "ME_5", group: "ME", size: 10 }, { id: "IE_5", group: "IE", size: 30 }, { id: "WT_5", group: "WT", size: 10 },
+  ],
+  links: [
+    { source: "主承商", target: "次承商1" },
+    { source: "主承商", target: "次承商2" },
+    { source: "主承商", target: "次承商3" },
+    { source: "主承商", target: "次承商4" },
+    { source: "主承商", target: "次承商5" },
+    { source: "次承商1", target: "ME_1" }, { source: "次承商1", target: "IE_1" }, { source: "次承商1", target: "WT_1" }, { source: "次承商1", target: "GC_1" }, { source: "次承商1", target: "CSA_1" },
+    { source: "次承商2", target: "GC_2" }, { source: "次承商2", target: "CSA_2" },
+    { source: "次承商3", target: "ME_3" }, { source: "次承商3", target: "IE_3" }, { source: "次承商3", target: "WT_3" },
+    { source: "次承商4", target: "CSA_4" },
+    { source: "次承商5", target: "ME_5" }, { source: "次承商5", target: "IE_5" }, { source: "次承商5", target: "WT_5" },
+  ]
+};
 
-  const nodes = [
-    { id: "主承商", group: 1 },
-    { id: "次承商 A", group: 2 },
-    { id: "次承商 B", group: 2 },
-    { id: "次承商 C", group: 2 },
-    { id: "次承商 D", group: 2 },
-    { id: "次承商 E", group: 2 },
-    { id: "工種 A1", group: 3 }, { id: "工種 A2", group: 3 }, { id: "工種 A3", group: 3 },
-    { id: "工種 B1", group: 3 }, { id: "工種 B2", group: 3 }, { id: "工種 B3", group: 3 },
-    { id: "工種 C1", group: 3 }, { id: "工種 C2", group: 3 }, { id: "工種 C3", group: 3 },
-    { id: "工種 D1", group: 3 }, { id: "工種 D2", group: 3 }, { id: "工種 D3", group: 3 }, { id: "工種 D4", group: 3 },
-    { id: "工種 E1", group: 3 }, { id: "工種 E2", group: 3 }, { id: "工種 E3", group: 3 }, { id: "工種 E4", group: 3 }, { id: "工種 E5", group: 3 }
-  ];
+const width = document.getElementById('chart').clientWidth;
+const height = 600;
+const svg = d3.select("#chart").append("svg").attr("width", width).attr("height", height);
 
-  const links = [
-    { source: "主承商", target: "次承商 A" },
-    { source: "主承商", target: "次承商 B" },
-    { source: "主承商", target: "次承商 C" },
-    { source: "主承商", target: "次承商 D" },
-    { source: "主承商", target: "次承商 E" },
-    { source: "次承商 A", target: "工種 A1" }, { source: "次承商 A", target: "工種 A2" }, { source: "次承商 A", target: "工種 A3" },
-    { source: "次承商 B", target: "工種 B1" }, { source: "次承商 B", target: "工種 B2" }, { source: "次承商 B", target: "工種 B3" },
-    { source: "次承商 C", target: "工種 C1" }, { source: "次承商 C", target: "工種 C2" }, { source: "次承商 C", target: "工種 C3" },
-    { source: "次承商 D", target: "工種 D1" }, { source: "次承商 D", target: "工種 D2" }, { source: "次承商 D", target: "工種 D3" }, { source: "次承商 D", target: "工種 D4" },
-    { source: "次承商 E", target: "工種 E1" }, { source: "次承商 E", target: "工種 E2" }, { source: "次承商 E", target: "工種 E3" }, { source: "次承商 E", target: "工種 E4" }, { source: "次承商 E", target: "工種 E5" }
-  ];
+const simulation = d3.forceSimulation(data.nodes)
+  .force("link", d3.forceLink(data.links).id(d => d.id).distance(100))
+  .force("charge", d3.forceManyBody().strength(-300))
+  .force("center", d3.forceCenter(width / 2, height / 2))
+  .force("collision", d3.forceCollide().radius(d => Math.sqrt(d.size) + 10));
 
-  const simulation = d3.forceSimulation(nodes)
-    .force("link", d3.forceLink(links).id(d => d.id).distance(80))
-    .force("charge", d3.forceManyBody().strength(-300))
-    .force("center", d3.forceCenter(svg.node().getBoundingClientRect().width / 2, 300));
+const link = svg.append("g").attr("stroke", "#aaa").selectAll("line")
+  .data(data.links).enter().append("line").attr("stroke-width", 2);
 
-  const link = svg.append("g")
-    .attr("class", "links")
-    .selectAll("line")
-    .data(links)
-    .enter().append("line")
-    .attr("class", "link");
+const node = svg.append("g").selectAll("circle")
+  .data(data.nodes).enter().append("circle")
+  .attr("r", d => Math.sqrt(d.size))
+  .attr("fill", d => d.group === "main" ? "#007bff" : (d.group === "sub" ? "#28a745" : "#ffc107"))
+  .call(drag(simulation));
 
-  const node = svg.append("g")
-    .attr("class", "nodes")
-    .selectAll("g")
-    .data(nodes)
-    .enter().append("g");
+const label = svg.append("g").selectAll("text")
+  .data(data.nodes).enter().append("text")
+  .text(d => d.id).attr("text-anchor", "middle").attr("dy", 4);
 
-  node.append("circle")
-    .attr("r", 10)
-    .attr("fill", d => d.group === 1 ? "#007bff" : (d.group === 2 ? "#28a745" : "#ffc107"));
+simulation.on("tick", () => {
+  link.attr("x1", d => d.source.x).attr("y1", d => d.source.y)
+      .attr("x2", d => d.target.x).attr("y2", d => d.target.y);
+  node.attr("cx", d => d.x).attr("cy", d => d.y);
+  label.attr("x", d => d.x).attr("y", d => d.y);
+});
 
-  node.append("text")
-    .text(d => d.id)
-    .attr("x", 12)
-    .attr("y", 3);
-
-  simulation.on("tick", () => {
-    link
-      .attr("x1", d => d.source.x)
-      .attr("y1", d => d.source.y)
-      .attr("x2", d => d.target.x)
-      .attr("y2", d => d.target.y);
-
-    node
-      .attr("transform", d => `translate(${d.x},${d.y})`);
-  });
+function drag(simulation) {
+  return d3.drag()
+    .on("start", function (event, d) {
+      if (!event.active) simulation.alphaTarget(0.3).restart();
+      d.fx = d.x; d.fy = d.y;
+    })
+    .on("drag", function (event, d) {
+      d.fx = event.x; d.fy = event.y;
+    })
+    .on("end", function (event, d) {
+      if (!event.active) simulation.alphaTarget(0);
+      d.fx = null; d.fy = null;
+    });
+}
 </script>
 </body>
 </html>
