--- a/5.html
+++ b/5.html
@@ -9,118 +9,182 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <style>
-    #chart { width: 100%; height: 600px; }
-    .node text { pointer-events: none; font-size: 12px; fill: #000; }
-  </style>
+  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
-
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a></li>
-      <li class="nav-item d-none d-sm-inline-block"><a href="#" class="nav-link">首頁</a></li>
+      <li class="nav-item">
+        <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+      </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="1.html" class="nav-link">首頁</a>
+      </li>
     </ul>
   </nav>
 
-  <!-- Sidebar -->
+  <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <a href="1.html" class="brand-link">
-      <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/8/83/Taiwan_Semiconductor_Manufacturing_Co_logo.svg/800px-Taiwan_Semiconductor_Manufacturing_Co_logo.svg.png" alt="Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/8/83/Taiwan_Semiconductor_Manufacturing_Co_logo.svg/800px-Taiwan_Semiconductor_Manufacturing_Co_logo.svg.png" alt="TSMC Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">勞動人力資料庫</span>
     </a>
     <div class="sidebar">
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
-          <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a></li>
+          <li class="nav-item">
+            <a href="2.html" class="nav-link"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a>
+          </li>
+          <li class="nav-item">
+            <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
+          </li>
         </ul>
       </nav>
     </div>
   </aside>
 
-  <!-- Content -->
+  <!-- Content Wrapper -->
   <div class="content-wrapper">
-    <div class="content-header"><div class="container-fluid"><h1 class="m-0">主承商關聯圖</h1></div></div>
-    <section class="content"><div class="container-fluid"><div id="chart"></div></div></section>
+    <div class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1 class="m-0">主承商與次承商關係圖</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="content">
+      <div class="container-fluid">
+        <div class="card">
+          <div class="card-body">
+            <svg id="network" width="100%" height="600"></svg>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </div>
 
 <script>
 const data = {
   nodes: [
-    { id: "主承商", group: "main", size: 1200 },
-    { id: "次承商1", group: "sub", size: 500 },
-    { id: "次承商2", group: "sub", size: 300 },
-    { id: "次承商3", group: "sub", size: 200 },
-    { id: "次承商4", group: "sub", size: 150 },
-    { id: "次承商5", group: "sub", size: 50 },
-    { id: "ME_1", group: "ME", size: 50 }, { id: "IE_1", group: "IE", size: 200 }, { id: "WT_1", group: "WT", size: 50 }, { id: "GC_1", group: "GC", size: 100 }, { id: "CSA_1", group: "CSA", size: 100 },
-    { id: "GC_2", group: "GC", size: 100 }, { id: "CSA_2", group: "CSA", size: 200 },
-    { id: "ME_3", group: "ME", size: 50 }, { id: "IE_3", group: "IE", size: 100 }, { id: "WT_3", group: "WT", size: 50 },
-    { id: "CSA_4", group: "CSA", size: 150 },
-    { id: "ME_5", group: "ME", size: 10 }, { id: "IE_5", group: "IE", size: 30 }, { id: "WT_5", group: "WT", size: 10 },
+    { id: '主承商', group: 'contractor', size: 1200 },
+    { id: '次承商1', group: 'sub1', size: 500 },
+    { id: '次承商2', group: 'sub2', size: 300 },
+    { id: '次承商3', group: 'sub3', size: 200 },
+    { id: '次承商4', group: 'sub4', size: 150 },
+    { id: '次承商5', group: 'sub5', size: 50 },
+    { id: 'ME1', group: 'sub1', size: 50 },
+    { id: 'IE1', group: 'sub1', size: 200 },
+    { id: 'WT1', group: 'sub1', size: 50 },
+    { id: 'GC1', group: 'sub1', size: 100 },
+    { id: 'CSA1', group: 'sub1', size: 100 },
+    { id: 'GC2', group: 'sub2', size: 100 },
+    { id: 'CSA2', group: 'sub2', size: 200 },
+    { id: 'ME3', group: 'sub3', size: 50 },
+    { id: 'IE3', group: 'sub3', size: 100 },
+    { id: 'WT3', group: 'sub3', size: 50 },
+    { id: 'CSA4', group: 'sub4', size: 150 },
+    { id: 'ME5', group: 'sub5', size: 10 },
+    { id: 'IE5', group: 'sub5', size: 30 },
+    { id: 'WT5', group: 'sub5', size: 10 },
   ],
   links: [
-    { source: "主承商", target: "次承商1" },
-    { source: "主承商", target: "次承商2" },
-    { source: "主承商", target: "次承商3" },
-    { source: "主承商", target: "次承商4" },
-    { source: "主承商", target: "次承商5" },
-    { source: "次承商1", target: "ME_1" }, { source: "次承商1", target: "IE_1" }, { source: "次承商1", target: "WT_1" }, { source: "次承商1", target: "GC_1" }, { source: "次承商1", target: "CSA_1" },
-    { source: "次承商2", target: "GC_2" }, { source: "次承商2", target: "CSA_2" },
-    { source: "次承商3", target: "ME_3" }, { source: "次承商3", target: "IE_3" }, { source: "次承商3", target: "WT_3" },
-    { source: "次承商4", target: "CSA_4" },
-    { source: "次承商5", target: "ME_5" }, { source: "次承商5", target: "IE_5" }, { source: "次承商5", target: "WT_5" },
+    { source: '主承商', target: '次承商1' },
+    { source: '主承商', target: '次承商2' },
+    { source: '主承商', target: '次承商3' },
+    { source: '主承商', target: '次承商4' },
+    { source: '主承商', target: '次承商5' },
+    { source: '次承商1', target: 'ME1' },
+    { source: '次承商1', target: 'IE1' },
+    { source: '次承商1', target: 'WT1' },
+    { source: '次承商1', target: 'GC1' },
+    { source: '次承商1', target: 'CSA1' },
+    { source: '次承商2', target: 'GC2' },
+    { source: '次承商2', target: 'CSA2' },
+    { source: '次承商3', target: 'ME3' },
+    { source: '次承商3', target: 'IE3' },
+    { source: '次承商3', target: 'WT3' },
+    { source: '次承商4', target: 'CSA4' },
+    { source: '次承商5', target: 'ME5' },
+    { source: '次承商5', target: 'IE5' },
+    { source: '次承商5', target: 'WT5' },
   ]
 };
 
-const width = document.getElementById('chart').clientWidth;
-const height = 600;
-const svg = d3.select("#chart").append("svg").attr("width", width).attr("height", height);
+const svg = d3.select("#network");
+const width = svg.node().getBoundingClientRect().width;
+const height = +svg.attr("height");
 
 const simulation = d3.forceSimulation(data.nodes)
   .force("link", d3.forceLink(data.links).id(d => d.id).distance(100))
   .force("charge", d3.forceManyBody().strength(-300))
-  .force("center", d3.forceCenter(width / 2, height / 2))
-  .force("collision", d3.forceCollide().radius(d => Math.sqrt(d.size) + 10));
+  .force("center", d3.forceCenter(width / 2, height / 2));
 
-const link = svg.append("g").attr("stroke", "#aaa").selectAll("line")
-  .data(data.links).enter().append("line").attr("stroke-width", 2);
+const link = svg.append("g")
+  .attr("stroke", "#999")
+  .attr("stroke-opacity", 0.6)
+.selectAll("line")
+.data(data.links)
+.enter().append("line")
+  .attr("stroke-width", 1.5);
 
-const node = svg.append("g").selectAll("circle")
-  .data(data.nodes).enter().append("circle")
-  .attr("r", d => Math.sqrt(d.size))
-  .attr("fill", d => d.group === "main" ? "#007bff" : (d.group === "sub" ? "#28a745" : "#ffc107"))
-  .call(drag(simulation));
+const node = svg.append("g")
+  .attr("stroke", "#fff")
+  .attr("stroke-width", 1.5)
+.selectAll("circle")
+.data(data.nodes)
+.enter().append("circle")
+  .attr("r", d => Math.sqrt(d.size) * 3)
+  .attr("fill", d => d.group === 'contractor' ? '#007bff' : d.group.startsWith('sub') ? '#28a745' : '#ffc107')
+  .call(d3.drag()
+      .on("start", dragstarted)
+      .on("drag", dragged)
+      .on("end", dragended));
 
-const label = svg.append("g").selectAll("text")
-  .data(data.nodes).enter().append("text")
-  .text(d => d.id).attr("text-anchor", "middle").attr("dy", 4);
+const label = svg.append("g")
+  .selectAll("text")
+  .data(data.nodes)
+  .enter().append("text")
+  .text(d => d.id)
+  .attr("font-size", "10px")
+  .attr("dy", 3);
 
 simulation.on("tick", () => {
-  link.attr("x1", d => d.source.x).attr("y1", d => d.source.y)
-      .attr("x2", d => d.target.x).attr("y2", d => d.target.y);
-  node.attr("cx", d => d.x).attr("cy", d => d.y);
-  label.attr("x", d => d.x).attr("y", d => d.y);
+  link
+      .attr("x1", d => d.source.x)
+      .attr("y1", d => d.source.y)
+      .attr("x2", d => d.target.x)
+      .attr("y2", d => d.target.y);
+
+  node
+      .attr("cx", d => d.x)
+      .attr("cy", d => d.y);
+
+  label
+      .attr("x", d => d.x + 5)
+      .attr("y", d => d.y);
 });
 
-function drag(simulation) {
-  return d3.drag()
-    .on("start", function (event, d) {
-      if (!event.active) simulation.alphaTarget(0.3).restart();
-      d.fx = d.x; d.fy = d.y;
-    })
-    .on("drag", function (event, d) {
-      d.fx = event.x; d.fy = event.y;
-    })
-    .on("end", function (event, d) {
-      if (!event.active) simulation.alphaTarget(0);
-      d.fx = null; d.fy = null;
-    });
+function dragstarted(event, d) {
+  if (!event.active) simulation.alphaTarget(0.3).restart();
+  d.fx = d.x;
+  d.fy = d.y;
+}
+
+function dragged(event, d) {
+  d.fx = event.x;
+  d.fy = event.y;
+}
+
+function dragended(event, d) {
+  if (!event.active) simulation.alphaTarget(0);
+  d.fx = null;
+  d.fy = null;
 }
 </script>
 </body>
