--- a/4.html
+++ b/4.html
@@ -88,7 +88,7 @@
         </select>
       </div>
       <div class="col-md-6">
-        <label for="subContractorSelect">次承商</label>
+        <a href="5.html" class="brand-link"><label for="subContractorSelect">次承商</label></a>
         <select id="subContractorSelect" class="form-control">
           <option>次承商 A</option>
           <option>次承商 B</option>
