--- a/2.html
+++ b/2.html
@@ -24,9 +24,9 @@
     </ul>
   </nav>
 
-  <!-- Sidebar -->
+  <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a href="1.html" class="brand-link">
+    <a href="#" class="brand-link">
       <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/8/83/Taiwan_Semiconductor_Manufacturing_Co_logo.svg/800px-Taiwan_Semiconductor_Manufacturing_Co_logo.svg.png" alt="TSMC Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">勞動人力資料庫</span>
     </a>
@@ -38,6 +38,13 @@
           </li>
           <li class="nav-item">
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
+              <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員評鑑</p></a></li>
+            </ul>
           </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
