--- a/7.html
+++ b/7.html
@@ -10,6 +10,21 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    .form-inline-label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .form-inline-label label {
+      flex: 1;
+      margin-bottom: 0;
+    }
+    .form-inline-label input {
+      width: 80px;
+      margin-left: 10px;
+    }
+  </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -85,120 +100,48 @@
     </div>
 
     <section class="content">
-       <div class="evaluation-section">
-      <div class="title-bar">
-        <h4>廠商評鑑</h4>
-        <h5>廠商名稱：<a href="#">主承攬商名稱A</a></h5>
+      <div class="evaluation-section">
+        <div class="title-bar">
+          <h4>廠商評鑑：(廠商名稱)</h4>
+        </div>
+        <form>
+          <div class="form-group form-inline-label">
+            <label>1. 安全紀律</label>
+            <input type="number" class="form-control" min="1" max="10" step="0.1">
+          </div>
+          <textarea class="form-control mb-3" rows="2" placeholder="請填寫說明..."></textarea>
+
+          <div class="form-group form-inline-label">
+            <label>2. 領班管理</label>
+            <input type="number" class="form-control" min="1" max="10" step="0.1">
+          </div>
+          <textarea class="form-control mb-3" rows="2" placeholder="請填寫說明..."></textarea>
+
+          <div class="form-group form-inline-label">
+            <label>3. 工程進度</label>
+            <input type="number" class="form-control" min="1" max="10" step="0.1">
+          </div>
+          <textarea class="form-control mb-3" rows="2" placeholder="請填寫說明..."></textarea>
+
+          <div class="form-group form-inline-label">
+            <label>4. 工程品質</label>
+            <input type="number" class="form-control" min="1" max="10" step="0.1">
+          </div>
+          <textarea class="form-control mb-3" rows="2" placeholder="請填寫說明..."></textarea>
+
+          <div class="form-group form-inline-label">
+            <label>5. 動員能力</label>
+            <input type="number" class="form-control" min="1" max="10" step="0.1">
+          </div>
+          <textarea class="form-control mb-3" rows="2" placeholder="請填寫說明..."></textarea>
+
+          <div class="text-center mt-4">
+            <button type="submit" class="btn btn-danger px-5">送出評分</button>
+          </div>
+        </form>
       </div>
-      
-      <form>
-        <div class="form-group row">
-          <label class="col-sm-8 col-form-label font-weight-bold">1. 安全紀律</label>
-          <div class="col-sm-2">
-            <input type="number" class="form-control score-box" min="1" max="10" step="0.1" value="">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10 offset-sm-1">
-            <textarea class="form-control" rows="2" placeholder="請填寫說明..."></textarea>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label class="col-sm-8 col-form-label font-weight-bold">2. 領班管理</label>
-          <div class="col-sm-2">
-            <input type="number" class="form-control score-box" min="1" max="10" step="0.1" value="">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10 offset-sm-1">
-            <textarea class="form-control" rows="2" placeholder="請填寫說明..."></textarea>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label class="col-sm-8 col-form-label font-weight-bold">3. 工程進度</label>
-          <div class="col-sm-2">
-            <input type="number" class="form-control score-box" min="1" max="10" step="0.1" value="">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10 offset-sm-1">
-            <textarea class="form-control" rows="2" placeholder="請填寫說明..."></textarea>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label class="col-sm-8 col-form-label font-weight-bold">4. 工程品質</label>
-          <div class="col-sm-2">
-            <input type="number" class="form-control score-box" min="1" max="10" step="0.1" value="">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10 offset-sm-1">
-            <textarea class="form-control" rows="2" placeholder="請填寫說明..."></textarea>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label class="col-sm-8 col-form-label font-weight-bold">5. 動員能力</label>
-          <div class="col-sm-2">
-            <input type="number" class="form-control score-box" min="1" max="10" step="0.1" value="">
-          </div>
-        </div>
-        <div class="form-group row">
-          <div class="col-sm-10 offset-sm-1">
-            <textarea class="form-control" rows="2" placeholder="請填寫說明..."></textarea>
-          </div>
-        </div>
-
-        <div class="text-center mt-4">
-          <button type="submit" class="btn btn-danger px-5">送出評分</button>
-        </div>
-      </form>
-    </div>
     </section>
   </div>
 </div>
-
-<script>
-  const ctx = document.getElementById('jobPieChart').getContext('2d');
-  const jobPieChart = new Chart(ctx, {
-    type: 'pie',
-    data: {
-      labels: ['ME', 'IE', 'WT', 'GC', 'CSA'],
-      datasets: [{
-        data: [250, 200, 300, 150, 100],
-        backgroundColor: ['#007bff', '#28a745', '#ffc107', '#dc3545', '#6f42c1']
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-    }
-  });
-
-  const ctxBar = document.getElementById('ageBarChart').getContext('2d');
-  const ageBarChart = new Chart(ctxBar, {
-    type: 'bar',
-    data: {
-      labels: ['20-29', '30-39', '40-49', '50-59', '60+'],
-      datasets: [{
-        label: '人數',
-        data: [150, 300, 250, 180, 70],
-        backgroundColor: '#17a2b8'
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      scales: {
-        y: {
-          beginAtZero: true
-        }
-      }
-    }
-  });
-</script>
 </body>
 </html>
