--- a/7.html
+++ b/7.html
@@ -102,7 +102,7 @@
     <section class="content">
       <div class="evaluation-section">
         <div class="title-bar">
-          <h4>廠商評鑑：(廠商名稱)</h4>
+          <h4>廠商評鑑：(主承商名稱)</h4>
         </div>
         <form>
           <div class="form-group form-inline-label">
