--- a/9.html
+++ b/9.html
@@ -77,7 +77,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">資料維護</h1>
+            <h1 class="m-0">資料維護：(資料種類)</h1>
           </div>
         </div>
       </div>
