--- a/3.html
+++ b/3.html
@@ -34,7 +34,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
           <li class="nav-item">
-            <a href="2.html" class="nav-link"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a>
+            <a href="2.html" class="nav-link active"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a>
           </li>
           <li class="nav-item">
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
@@ -47,7 +47,7 @@
             </ul>
           </li>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
+            <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商資料</p></a></li>
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員資料</p></a></li>
