--- a/2.html
+++ b/2.html
@@ -34,7 +34,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
           <li class="nav-item">
-            <a href="2.html" class="nav-link"  active><i class="nav-icon fas fa-users"></i><p>人員管理</p></a>
+            <a href="2.html" class="nav-link active"><i class="nav-icon fas fa-users"></i><p>人員管理</p></a>
           </li>
           <li class="nav-item">
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
