--- a/7.html
+++ b/7.html
@@ -56,9 +56,9 @@
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
           </li>
           <li class="nav-item has-treeview">
-            <a href="#" class="nav-link"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
+            <a href="#" class="nav-link active"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
-              <li class="nav-item"><a href="8.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
+              <li class="nav-item"><a href="8.html" class="nav-link active"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
               <li class="nav-item"><a href="#" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員評鑑</p></a></li>
             </ul>
           </li>
