--- a/7.html
+++ b/7.html
@@ -63,7 +63,7 @@
             </ul>
           </li>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
+            <a href="#" class="nav-link"><i class="nav-icon fas fa-cogs"></i><p>資料維護<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>廠商資料</p></a></li>
               <li class="nav-item"><a href="9.html" class="nav-link"><i class="far fa-circle nav-icon"></i><p>人員資料</p></a></li>
