--- a/7.html
+++ b/7.html
@@ -55,7 +55,7 @@
           <li class="nav-item">
             <a href="4.html" class="nav-link"><i class="nav-icon fas fa-industry"></i><p>廠商管理</p></a>
           </li>
-          <li class="nav-item has-treeview">
+          <li class="nav-item has-treeview menu-open">
             <a href="#" class="nav-link active"><i class="nav-icon fas fa-clipboard-check"></i><p>評鑑管理<i class="right fas fa-angle-left"></i></p></a>
             <ul class="nav nav-treeview">
               <li class="nav-item"><a href="8.html" class="nav-link active"><i class="far fa-circle nav-icon"></i><p>廠商評鑑</p></a></li>
