--- a/userinfo.html
+++ b/userinfo.html
@@ -52,12 +52,10 @@
       </li>
     </ul>
 
-    <a href="1.html" class="btn btn-primary btn-block"><b>返回首頁</b></a>
+    <a href="userinfo2.html" class="btn btn-primary btn-block"><b>編輯</b></a>
+    <a href="0.html" class="btn btn-primary btn-block"><b>登出</b></a>
   </div>
 
-  <div class="text-center" style="margin-top: 20px;">
-    <a href="0.html">或登出</a>
-  </div>
   <div class="lockscreen-footer text-center">
     版權所有 &copy; 2023-2024 <b><a href="#" class="text-black">TSMC</a></b><br>
     保留一切權利
