--- a/userinfo2.html
+++ b/userinfo2.html
@@ -79,8 +79,20 @@
     </div>
   </aside>
 
-<div class="container mt-5">
-  <h2 class="mb-4">使用者基本資料</h2>
+<!-- Content Wrapper -->
+  <div class="content-wrapper">
+    <div class="content-header">
+      <div class="container-fluid">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1 class="m-0">>使用者基本資料</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="content">
+      <div class="container-fluid">
   <form>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">帳號</label>
@@ -140,8 +152,11 @@
         <button type="submit" class="btn btn-danger">變更密碼</button>
       </div>
     </div>
-  </form>
-</div>
+  </form> 
+      </div>
+    </section>
+  </div>
+  
 
 </body>
 </html>
