--- a/userinfo2.html
+++ b/userinfo2.html
@@ -85,7 +85,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">>使用者基本資料</h1>
+            <h1 class="m-0">使用者基本資料</h1>
           </div>
         </div>
       </div>
